# LegendOfKrya

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/engine/: CMakeLists.txt  game.cpp  game.hpp
